--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
 						</p>
 						<div class="row">
 							<div class="col-md-6">
-								<i class="bx bx-receipt"></i>
+								<i class="bx bx-tv"></i>
 								<h4>Series</h4>
 								<p>Un variado catalogo de Series</p>
 								<a href="Catalogos/01-Series/Series%20Finalizadas%20%23s-M.html#F:/#s-M" class="btn-get-started scrollto" target="_blank">#-M</a>
 								<a href="Catalogos/01-Series/Series%20Finalizadas%20N-Z.html#E:/Series%20Finalizadas" class="btn-get-started scrollto" target="_blank">N-Z</a>
 							</div>
 							<div class="col-md-6">
-								<i class="bx bx-cube-alt"></i>
+								<i class="bx bx-slideshow"></i>
 								<h4>Novelas</h4>
 								<p>Novelas de su preferencia</p>
 								<a href="Catalogos/02-Novelas/Novelas%20Finalizadas%20%23s%20a%20F.html#W:/Novelas%20Finalizadas" class="btn-get-started scrollto" target="_blank">#-F</a>
@@ -157,14 +157,14 @@
 
 							</div>
 							<div class="col-md-6">
-								<i class="bx bx-receipt"></i>
+								<i class="bx bx-tv"></i>
 								<h4>Animes</h4>
 								<p>Animes de todo los tipos de generes</p>
 								<a href="Catalogos/03-Animes/01-Animes%20part%20%23-M-1.html#O:/" class="btn-get-started scrollto" target="_blank">#-M</a>
 								<a href="Catalogos/03-Animes/02-Animes%20part%20N-Z-5.html#H:/" class="btn-get-started scrollto" target="_blank">N-Z</a>
 							</div>
 							<div class="col-md-6">
-								<i class="bx bx-cube-alt"></i>
+								<i class="bx bx-slideshow"></i>
 								<h4>Doramas</h4>
 								<p>Doramas japoneses, Chinos, Koreanos</p>
 								<a href="Catalogos/05-Doramas/DORAMAS.html#E:/Documentos/DORAMAS" class="btn-get-started scrollto" target="_blank">#-Z</a>
@@ -172,7 +172,7 @@
 
 							</div>
 							<div class="col-md-6">
-								<i class="bx bx-cube-alt"></i>
+								<i class="bx bx-book-alt"></i>
 								<h4>Cursos</h4>
 								<p>Cursos de Video2Brain, LinkedIn, Domestika en Ingles-Español</p>
 								<a href="Catalogos/04-Variado/01%20-%20Video2Brain.html#F:/Downloaded/01%20-%20Video2Brain" class="btn-get-started scrollto" target="_blank">Video2Brain</a>
@@ -185,7 +185,7 @@
 
 							</div>
 							<div class="col-md-6">
-								<i class="bx bx-cube-alt"></i>
+								<i class="bx bx-desktop"></i>
 								<h4>Softwares</h4>
 								<p>Softwares de Windows</p>
 								<a href="Catalogos/06-Softwares/Aplicaciones%20PC.html#E:/Aplicaciones%20PC" class="btn-get-started scrollto" target="_blank">Softwares #1</a>
@@ -254,7 +254,7 @@
 					<div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
 						<div class="icon-box iconbox-blue">
 							<div class="icon">
-								<i class="bx bxl-dribbble"></i>
+								<i class="bx bx-package"></i>
 							</div>
 							<h4><a href="">Pakete Semanal</a></h4>
 							<p>Mas de dos terras de pakete semanal</p>
@@ -264,7 +264,7 @@
 					<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
 						<div class="icon-box iconbox-orange ">
 							<div class="icon">
-								<i class="bx bx-file"></i>
+								<i class="bx bx-car"></i>
 							</div>
 							<h4><a href="">Audiovisuales a domicilio</a></h4>
 							<p>Venta de Series-NovelasDormas-Animes a Domicilio</p>
@@ -274,7 +274,7 @@
 					<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
 						<div class="icon-box iconbox-pink">
 							<div class="icon">
-								<i class="bx bx-tachometer"></i>
+								<i class="bx bx-download"></i>
 							</div>
 							<h4><a href="">Descarga de Archivos</a></h4>
 							<p><b style="color: red">NUEVO!!</b> Prestamos servicio de descarga de archivos, videos, cursos, Drivers y mas de su preferencia.</p>
@@ -284,7 +284,7 @@
 					<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
 						<div class="icon-box iconbox-yellow">
 							<div class="icon">
-								<i class="bx bx-layer"></i>
+								<i class="bx bxl-microsoft"></i>
 							</div>
 							<h4><a href="">Reinstalacion de OS(Window-Linux)</a></h4>
 							<p><b style="color: red">NUEVO!!</b>Reinstalacion de Sistema Operativo con un pakete de softwares basico, Avanzado</p>
@@ -294,7 +294,7 @@
 					<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
 						<div class="icon-box iconbox-red">
 							<div class="icon">
-								<i class="bx bx-slideshow"></i>
+								<i class="bx bxl-whatsapp"></i>
 							</div>
 							<h4><a href="">Consultas sobre PC</a></h4>
 							<p><b style="color: red">NUEVO!!</b>Creamos un grupo sobre consultas a problemas de software, tecnico de su pc, para darle solucion.</p>
@@ -304,10 +304,11 @@
 					<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
 						<div class="icon-box iconbox-teal">
 							<div class="icon">
-								<i class="bx bx-arch"></i>
+								<i class="bx bx-video"></i>
 							</div>
 							<h4><a href="">Publicidad</a></h4>
-							<p>Prestamos servicio publicitario en el Pakete Semanal, usando spot, teasers</p>
+							<p>Prestamos servicio publicitario en el Pakete Semanal, usando spot, teasers.</p>
+					<p><b style="color: red">NUEVO!!</b>Gestion de Redes Sociales, precio economicos.</p>
 						</div>
 					</div>
 
@@ -881,39 +882,42 @@
 			<div class="container">
 				<div class="row">
 
-					<div class="col-lg-3 col-md-6 footer-contact">
-						<h3>Baker</h3>
+					<div class="col-lg-4 col-md-6 footer-contact">
+						<h3>3RTVpaket</h3>
 						<p>
-							A108 Adam Street <br>
-							New York, NY 535022<br>
-							United States <br><br>
-							<strong>Phone:</strong> +1 5589 55488 55<br>
+							Avenida 56 #3509 e/ 35 y 37 <br>
+							Cienfuegos, 55100<br>
+							Cuba <br><br>
+							<strong>telefono:</strong> ++53 52472074<br>
 							<strong>Email:</strong> info@example.com<br>
 						</p>
 					</div>
 
-					<div class="col-lg-2 col-md-6 footer-links">
+					<div class="col-lg-4 col-md-6 footer-links">
 						<h4>Useful Links</h4>
 						<ul>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#about">Catalogos</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#services">Servicios</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#team">Equipo</a></li>
+<!--							<li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>-->
 						</ul>
 					</div>
 
-					<div class="col-lg-3 col-md-6 footer-links">
-						<h4>Our Services</h4>
+					<div class="col-lg-4 col-md-6 footer-links">
+						<h4>nuestros Servicios</h4>
 						<ul>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-							<li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#">Pakete Semanal</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#">Audiovisuales a Domicilio</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#">Descarga de Archivos</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#">Reinstalacion OS</a></li>
 							<li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="#">Consultas PC</a></li>
+								<li><i class="bx bx-chevron-right"></i> <a href="#">Publicidad</a></li>
 						</ul>
 					</div>
 
+<!--
 					<div class="col-lg-4 col-md-6 footer-newsletter">
 						<h4>Join Our Newsletter</h4>
 						<p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
@@ -921,6 +925,7 @@
 							<input type="email" name="email"><input type="submit" value="Subscribe">
 						</form>
 					</div>
+-->
 
 				</div>
 			</div>
@@ -930,14 +935,14 @@
 
 			<div class="mr-md-auto text-center text-md-left">
 				<div class="copyright">
-					&copy; Copyright <strong><span>Baker</span></strong>. All Rights Reserved
+					&copy; Copyright <strong><span>3RTVPaket</span></strong>. All Rights Reserved
 				</div>
 				<div class="credits">
 					<!-- All the links in the footer should remain intact. -->
 					<!-- You can delete the links only if you purchased the pro version. -->
 					<!-- Licensing information: https://bootstrapmade.com/license/ -->
 					<!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/ -->
-					Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+					Designed by <a href="https://bootstrapmade.com/">BootstrapMade </a><a>& Modified by Serguei9090</a>
 				</div>
 			</div>
 			<div class="social-links text-center text-md-right pt-3 pt-md-0">
