--- a/index.html
+++ b/index.html
@@ -798,34 +798,35 @@
 							</div>
 							<div class="col-md-4">
 								<div class="info-box mt-4">
-									<i class="bx bx-envelope"></i>
+									<i class="bx bxl-whatsapp"></i>
 									<h3>Whatsapp</h3>
 									<ul class="ord_list">
-										<li>info@example.com</li>
-										<li>info@example.com</li>
-										<li>info@example.com</li>
+										<li><a href="https://chat.whatsapp.com/BlxHhKGjgImE22CFeZxFuM" target="_blank">Grupo Serguei</a></li>
+										<li><a href="https://chat.whatsapp.com/ET5136qe9FCJN7kblqZLoW" target="_blank">Grupo Daisi#1</a></li>										<li><a href="https://chat.whatsapp.com/CbfVva0NeDcG9VRd527QW9" target="_blank">Grupo Daisi#2</a></li>
+										<li><a href="https://chat.whatsapp.com/H0T7voJYkip142HM9mXzlg" target="_blank">Grupo Maryla</a></li>
+					<li><a href="https://chat.whatsapp.com/BlxHhKGjgImE22CFeZxFuM" target="_blank">Grupo Rosy</a></li>
 									</ul>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="info-box mt-4">
-									<i class="bx bx-phone-call"></i>
+									<i class="bx bxl-telegram"></i>
 									<h3>Telegram</h3>
 									<ul class="ord_list">
-										<li>info@example.com</li>
-										<li>info@example.com</li>
-										<li>info@example.com</li>
+	<li><a href="https://t.me/joinchat/HslrJRrY9ma67albhRDgTQ" target="_blank">Grupo Serguei</a></li>
+					<li><a href="https://t.me/seriesynovelascfgos" target="_blank">Grupo Maryla</a></li>
+
+										
 									</ul>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="info-box mt-4">
-									<i class="bx bx-phone-call"></i>
+									<i class="bx bxl-facebook"></i>
 									<h3>Facebook</h3>
 									<ul class="ord_list">
-										<li>info@example.com</li>
-										<li>info@example.com</li>
-										<li>info@example.com</li>
+										<li><a href="https://www.facebook.com/groups/ventadeseriesnovelasanimescfg/" target="_blank">Grupo Serguei</a></li>
+
 									</ul>
 								</div>
 							</div>
