--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
 								<div class="info-box mt-4">
 									<i class="bx bx-phone-call"></i>
 									<h3>Call Us</h3>
-									<p>+53 52472074<br>+53 43****</p>
+									<p>+53 52472074<br>+53 43517275</p>
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -889,7 +889,7 @@
 							Avenida 56 #3509 e/ 35 y 37 <br>
 							Cienfuegos, 55100<br>
 							Cuba <br><br>
-							<strong>telefono:</strong> ++53 52472074<br>
+							<strong>telefono:</strong> +53 43517275<br>
 							<strong>Email:</strong> info@example.com<br>
 						</p>
 					</div>
