--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header" style="padding:15px 50px;">
-         <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+         <h5 class="modal-title" id="staticBackdropLabel">Series</h5>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body modal_img" style="padding:10px 20px;">
@@ -300,7 +300,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header" style="padding:15px 50px;">
-         <h5 class="modal-title" id="staticBackdropLabel_2">Modal title</h5>
+         <h5 class="modal-title" id="staticBackdropLabel_2">Novelas</h5>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body modal_img" style="padding:10px 20px;">
@@ -358,8 +358,6 @@
 								<p>Animes como Shounen, Mecha, Gore,</p>
 								<a href="Catalogos/03-Animes/01-Animes%20part%20%23-M-1.html#O:/" class="btn-get-started scrollto" target="_blank">#-M</a>
 								<a href="Catalogos/03-Animes/02-Animes%20part%20N-Z-5.html#H:/" class="btn-get-started scrollto" target="_blank">N-Z</a>
-								<a href="Catalogos/01-Series/Series%20Finalizadas%20%23s-M.html#F:/#s-M" class="btn-get-started scrollto" target="_blank">#-M</a>
-								<a href="Catalogos/01-Series/Series%20Finalizadas%20N-Z.html#E:/Series%20Finalizadas" class="btn-get-started scrollto" target="_blank">N-Z</a>
 								<a href="Catalogos/03-Animes/Animes%20Variado%201.html#I:/" class="btn-get-started scrollto" target="_blank">Variado-1</a>
 								<a href="Catalogos/03-Animes/Animes%20Variado%202.html#F:/Mangas%20[Anime]" class="btn-get-started scrollto" target="_blank">Variado-2</a>
 								<a href="Catalogos/03-Animes/Animes%20Variado%203.html#N:/Mangas%20[Anime]" class="btn-get-started scrollto" target="_blank">Variado-3</a>
@@ -407,7 +405,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header" style="padding:15px 50px;">
-         <h5 class="modal-title" id="staticBackdropLabel_3">Modal title</h5>
+         <h5 class="modal-title" id="staticBackdropLabel_3">Animes</h5>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body modal_img" style="padding:10px 20px;">
@@ -510,7 +508,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header" style="padding:15px 50px;">
-         <h5 class="modal-title" id="staticBackdropLabel_4">Modal title</h5>
+         <h5 class="modal-title" id="staticBackdropLabel_4">Doramas</h5>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body modal_img" style="padding:10px 20px;">
@@ -615,7 +613,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header" style="padding:15px 50px;">
-         <h5 class="modal-title" id="staticBackdropLabel_5">Modal title</h5>
+         <h5 class="modal-title" id="staticBackdropLabel_5">Cursos</h5>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body modal_img" style="padding:10px 20px;">
@@ -721,7 +719,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header" style="padding:15px 50px;">
-         <h5 class="modal-title" id="staticBackdropLabel_6">Modal title</h5>
+         <h5 class="modal-title" id="staticBackdropLabel_6">Softwares</h5>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body modal_img" style="padding:10px 20px;">
